fix gaps in box drawings

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,7 @@ body {
   max-width: 800px;
   margin: auto;
   padding: 1em;
-  line-height: 1.4;
+  line-height: 1.4rem;
   overflow-y: scroll;
 }
 
@@ -39,7 +39,6 @@ sup {
   vertical-align: top;
   font-size: 0.8em;
 }
-
 sub {
   vertical-align: bottom;
   font-size: 0.8em;
@@ -52,7 +51,7 @@ pre {
   padding: 1em;
   margin: 4px;
   overflow-x: auto;
-  line-height: 1.3;
+  line-height: 1rem;
 }
 code { background: #ddd; }
 pre code {
@@ -66,30 +65,23 @@ main { hyphens: auto; }
 blockquote {
   border-left: 4px solid #777;
   padding: 3px 1em;
-  font-size: 80%;
 }
 
-ul {
-  list-style-type: square;
-}
-
+ul { list-style-type: square;}
 ul li li {
   list-style-type: none;
   position: relative;
 }
-
 ul li li::before {
   content: "└─";
   position: absolute;
   left: -1.5em;
 }
-
+/* figure and captions */
 .responsive-image img {
   width: 100%;
   height: auto;
 }
-
-/* figure and captions */
 figure { 
   position: relative;
   margin: 0;
@@ -109,6 +101,7 @@ table {
   background: #fff;
   max-width: calc(100% - 10px);
   border-collapse: collapse;
+  font-size: 80%;
 }
 table thead th {
   border-bottom: 1px solid #777;
